Fix sticky sidebar top distance, overlapping elements, quickfix reading bar layout

--- a/packages/block-library/src/blocks/header/scss/_reading-bar.scss
+++ b/packages/block-library/src/blocks/header/scss/_reading-bar.scss
@@ -113,6 +113,8 @@
   padding-left: 32px;
   padding-right: 32px;
 
+  --nb-block-top-spacing: 0 !important;
+
   &[class] {
     background: none;
   }
